# vizuara_test

./: Cargo.toml  README.md  clear_process.sh
data/Tug_of_War/: index.html
src/: btn_component.rs  main.rs
