[package]
name = "vizuara_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
env_logger = "0.10.0"
gtk = { package="gtk", version="0.16.0" }
log = "0.4.19"
once_cell = "1.18.0"
tiny_http = "0.12.0"
webkit2gtk = { version = "1.1.0", features = ["v2_6", "v2_24", "v2_38"] }
